deployment/dev/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: deploy-backend
  name: service-backend
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
    name: http
  selector:
    app: deploy-backend
  type: ClusterIP
status:
  loadBalancer: {}
